--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             >Web<span class="header-logo-black">Studio</span></a
           >
           <ul class="header-list">
-            <li class="header-list-item">
-              <a class="header-list-link" href="./index.html">Studio</a>
+            <li class="header-list-item ">
+              <a class="header-list-link studio-active " href="./index.html">Studio</a>
             </li>
             <li class="header-list-item">
               <a class="header-list-link" href="">Portfolio</a>
