--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           >
           <ul class="header-list">
             <li class="header-list-item ">
-              <a class="header-list-link studio-active " href="./index.html">Studio</a>
+              <a class="header-list-link current" href="./index.html">Studio</a>
             </li>
             <li class="header-list-item">
               <a class="header-list-link" href="">Portfolio</a>
@@ -70,6 +70,13 @@
           <h2 class="benefits-title section-title visually-hidden">Benefits</h2>
           <ul class="benefits-list">
             <li class="benefits-list-item">
+              <div class="benefits-box">
+                <svg class="benefits-icon" width="64" height="64">
+                  <use href="./images/symbol-defs.svg#icon-antenna">
+
+                  </use>
+               </svg>
+              </div>
               <h3 class="benefits-subtitle subtitle">Strategy</h3>
               <p class="benefits-list-text text">
                 Our goal is to identify the business problem to walk away with
@@ -77,6 +84,13 @@
               </p>
             </li>
             <li class="benefits-list-item">
+              <div class="benefits-box">
+                <svg class="benefits-icon">
+                  <use>
+
+                  </use>
+                </svg>
+              </div>
               <h3 class="benefits-subtitle subtitle">Punctuality</h3>
               <p class="benefits-list-text text">
                 Bring the key message to the brand's audience for the best price
@@ -84,6 +98,13 @@
               </p>
             </li>
             <li class="benefits-list-item">
+              <div class="benefits-box">
+                <svg class="benefits-icon">
+                  <use>
+
+                  </use>
+                </svg>
+              </div>
               <h3 class="benefits-subtitle subtitle">Diligence</h3>
               <p class="benefits-list-text text">
                 Research and confirm brands with the strongest digital growth
@@ -91,6 +112,13 @@
               </p>
             </li>
             <li class="benefits-list-item">
+              <div class="benefits-box">
+                <svg class="benefits-icon">
+                  <use>
+
+                  </use>
+                </svg>
+              </div>
               <h3 class="benefits-subtitle subtitle">Technologies</h3>
               <p class="benefits-list-text text">
                 Design practice focused on digital experiences. We bring forth a
