--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             >Web<span class="header-logo-black">Studio</span></a
           >
           <ul class="header-list">
-            <li class="header-list-item ">
+            <li class="header-list-item">
               <a class="header-list-link current" href="./index.html">Studio</a>
             </li>
             <li class="header-list-item">
@@ -72,10 +72,8 @@
             <li class="benefits-list-item">
               <div class="benefits-box">
                 <svg class="benefits-icon" width="64" height="64">
-                  <use href="./images/symbol-defs.svg#icon-antenna">
-
-                  </use>
-               </svg>
+                  <use href="./images/symbol-defs.svg#icon-antenna"></use>
+                </svg>
               </div>
               <h3 class="benefits-subtitle subtitle">Strategy</h3>
               <p class="benefits-list-text text">
@@ -85,10 +83,8 @@
             </li>
             <li class="benefits-list-item">
               <div class="benefits-box">
-                <svg class="benefits-icon">
-                  <use>
-
-                  </use>
+                <svg class="benefits-icon" width="64" height="64">
+                  <use href="./images/symbol-defs.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="benefits-subtitle subtitle">Punctuality</h3>
@@ -99,10 +95,8 @@
             </li>
             <li class="benefits-list-item">
               <div class="benefits-box">
-                <svg class="benefits-icon">
-                  <use>
-
-                  </use>
+                <svg class="benefits-icon" width="64" height="64">
+                  <use href="./images/symbol-defs.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="benefits-subtitle subtitle">Diligence</h3>
@@ -113,10 +107,8 @@
             </li>
             <li class="benefits-list-item">
               <div class="benefits-box">
-                <svg class="benefits-icon">
-                  <use>
-
-                  </use>
+                <svg class="benefits-icon" width="64" height="64">
+                  <use href="./images/symbol-defs.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="benefits-subtitle subtitle">Technologies</h3>
@@ -144,6 +136,38 @@
               <div class="team-card">
                 <h3 class="team-subtitle subtitle">Mark Guerrero</h3>
                 <p class="team-text text">Product Designer</p>
+                <ul class="team-icon-list">
+                  <li class="team-icon-item">
+                    <a class="team-icon-link" href="">
+                      <svg class="team-icon" width="16" height="16">
+                        <use
+                          href="/images/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item">
+                    <a class="team-icon-link" href="">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="/images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item">
+                    <a class="team-icon-link" href="">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="/images/symbol-defs.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item">
+                    <a class="team-icon-link" href="">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="/images/symbol-defs.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list-item">
@@ -157,6 +181,38 @@
               <div class="team-card">
                 <h3 class="team-subtitle subtitle">Tom Ford</h3>
                 <p class="team-text text">Frontend Developer</p>
+                <ul class="team-icon-list">
+                  <li class="team-icon-item">
+                    <a class="team-icon-link" href="">
+                      <svg class="team-icon" width="16" height="16">
+                        <use
+                          href="/images/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item">
+                    <a class="team-icon-link" href="">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="/images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item">
+                    <a class="team-icon-link" href="">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="/images/symbol-defs.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item">
+                    <a class="team-icon-link" href="">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="/images/symbol-defs.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list-item">
@@ -170,6 +226,38 @@
               <div class="team-card">
                 <h3 class="team-subtitle subtitle">Camila Garcia</h3>
                 <p class="team-text text">Marketing</p>
+                <ul class="team-icon-list">
+                  <li class="team-icon-item">
+                    <a class="team-icon-link" href="">
+                      <svg class="team-icon" width="16" height="16">
+                        <use
+                          href="/images/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item">
+                    <a class="team-icon-link" href="">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="/images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item">
+                    <a class="team-icon-link" href="">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="/images/symbol-defs.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item">
+                    <a class="team-icon-link" href="">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="/images/symbol-defs.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list-item">
@@ -183,6 +271,38 @@
               <div class="team-card">
                 <h3 class="team-subtitle subtitle">Daniel Wilson</h3>
                 <p class="team-text text">UI Designer</p>
+                <ul class="team-icon-list">
+                  <li class="team-icon-item">
+                    <a class="team-icon-link" href="">
+                      <svg class="team-icon" width="16" height="16">
+                        <use
+                          href="/images/symbol-defs.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item">
+                    <a class="team-icon-link" href="">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="/images/symbol-defs.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item">
+                    <a class="team-icon-link" href="">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="/images/symbol-defs.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item">
+                    <a class="team-icon-link" href="">
+                      <svg class="team-icon" width="16" height="16">
+                        <use href="/images/symbol-defs.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -279,14 +399,49 @@
     </main>
 
     <footer class="footer">
-      <div class="container">
-        <a class="footer-logo" href="./index.html">
-          Web<span class="footer-logo-accent">Studio</span></a
-        >
-        <p class="footer-text text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-container">
+        <div class="footer-logo-container">
+          <a class="footer-logo" href="./index.html">
+            Web<span class="footer-logo-accent">Studio</span></a
+          >
+          <p class="footer-text text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-social-container">
+          <p class="footer-text-media text">Social media</p>
+          <ul class="footer-icon-list">
+            <li class="footer-icon-item">
+              <a class="footer-icon-link" href="">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="/images/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-icon-item">
+              <a class="footer-icon-link" href="">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="/images/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-icon-item">
+              <a class="footer-icon-link" href="">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="/images/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-icon-item">
+              <a class="footer-icon-link" href="">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="/images/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
