--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <li class="benefits-list-item">
               <div class="benefits-box">
                 <svg class="benefits-icon" width="64" height="64">
-                  <use href="./images/icon.svg#icon-antenna"></use>
+                  <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="benefits-subtitle subtitle">Strategy</h3>
@@ -84,7 +84,7 @@
             <li class="benefits-list-item">
               <div class="benefits-box">
                 <svg class="benefits-icon" width="64" height="64">
-                  <use href="./images/icon.svg#icon-clock"></use>
+                  <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="benefits-subtitle subtitle">Punctuality</h3>
@@ -96,7 +96,7 @@
             <li class="benefits-list-item">
               <div class="benefits-box">
                 <svg class="benefits-icon" width="64" height="64">
-                  <use href="./images/icon.svg#icon-diagram"></use>
+                  <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="benefits-subtitle subtitle">Diligence</h3>
@@ -108,7 +108,7 @@
             <li class="benefits-list-item">
               <div class="benefits-box">
                 <svg class="benefits-icon" width="64" height="64">
-                  <use href="./images/icon.svg#icon-astronaut"></use>
+                  <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="benefits-subtitle subtitle">Technologies</h3>
@@ -141,7 +141,7 @@
                     <a class="team-icon-link" href="">
                       <svg class="team-icon" width="16" height="16">
                         <use
-                          href="./images/icon.svg#icon-instagram"
+                          href="./images/icons.svg#icon-instagram"
                         ></use>
                       </svg>
                     </a>
@@ -149,21 +149,21 @@
                   <li class="team-icon-item">
                     <a class="team-icon-link" href="">
                       <svg class="team-icon" width="16" height="16">
-                        <use href="./images/icon.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-icon-item">
                     <a class="team-icon-link" href="">
                       <svg class="team-icon" width="16" height="16">
-                        <use href="./images/icon.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-icon-item">
                     <a class="team-icon-link" href="">
                       <svg class="team-icon" width="16" height="16">
-                        <use href="./images/icon.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -186,7 +186,7 @@
                     <a class="team-icon-link" href="">
                       <svg class="team-icon" width="16" height="16">
                         <use
-                          href="./images/icon.svg#icon-instagram"
+                          href="./images/icons.svg#icon-instagram"
                         ></use>
                       </svg>
                     </a>
@@ -194,21 +194,21 @@
                   <li class="team-icon-item">
                     <a class="team-icon-link" href="">
                       <svg class="team-icon" width="16" height="16">
-                        <use href="./images/icon.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-icon-item">
                     <a class="team-icon-link" href="">
                       <svg class="team-icon" width="16" height="16">
-                        <use href="./images/icon.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-icon-item">
                     <a class="team-icon-link" href="">
                       <svg class="team-icon" width="16" height="16">
-                        <use href="./images/icon.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -231,7 +231,7 @@
                     <a class="team-icon-link" href="">
                       <svg class="team-icon" width="16" height="16">
                         <use
-                          href="./images/icon.svg#icon-instagram"
+                          href="./images/icons.svg#icon-instagram"
                         ></use>
                       </svg>
                     </a>
@@ -239,21 +239,21 @@
                   <li class="team-icon-item">
                     <a class="team-icon-link" href="">
                       <svg class="team-icon" width="16" height="16">
-                        <use href="./images/icon.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-icon-item">
                     <a class="team-icon-link" href="">
                       <svg class="team-icon" width="16" height="16">
-                        <use href="./images/icon.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-icon-item">
                     <a class="team-icon-link" href="">
                       <svg class="team-icon" width="16" height="16">
-                        <use href="./images/icon.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -276,7 +276,7 @@
                     <a class="team-icon-link" href="">
                       <svg class="team-icon" width="16" height="16">
                         <use
-                          href="./images/icon.svg#icon-instagram"
+                          href="./images/icons.svg#icon-instagram"
                         ></use>
                       </svg>
                     </a>
@@ -284,21 +284,21 @@
                   <li class="team-icon-item">
                     <a class="team-icon-link" href="">
                       <svg class="team-icon" width="16" height="16">
-                        <use href="./images/icon.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-icon-item">
                     <a class="team-icon-link" href="">
                       <svg class="team-icon" width="16" height="16">
-                        <use href="./images/icon.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-icon-item">
                     <a class="team-icon-link" href="">
                       <svg class="team-icon" width="16" height="16">
-                        <use href="./images/icon.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -415,28 +415,28 @@
             <li class="footer-icon-item">
               <a class="footer-icon-link" href="">
                 <svg class="footer-icon" width="24" height="24">
-                  <use href="./images/icon.svg#icon-instagram"></use>
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-icon-item">
               <a class="footer-icon-link" href="">
                 <svg class="footer-icon" width="24" height="24">
-                  <use href="./images/icon.svg#icon-twitter"></use>
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-icon-item">
               <a class="footer-icon-link" href="">
                 <svg class="footer-icon" width="24" height="24">
-                  <use href="./images/icon.svg#icon-facebook"></use>
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-icon-item">
               <a class="footer-icon-link" href="">
                 <svg class="footer-icon" width="24" height="24">
-                  <use href="./images/icon.svg#icon-linkedin"></use>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
