--- a/index.html
+++ b/index.html
@@ -140,9 +140,7 @@
                   <li class="team-icon-item">
                     <a class="team-icon-link" href="">
                       <svg class="team-icon" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-instagram"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -185,9 +183,7 @@
                   <li class="team-icon-item">
                     <a class="team-icon-link" href="">
                       <svg class="team-icon" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-instagram"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -230,9 +226,7 @@
                   <li class="team-icon-item">
                     <a class="team-icon-link" href="">
                       <svg class="team-icon" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-instagram"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -275,9 +269,7 @@
                   <li class="team-icon-item">
                     <a class="team-icon-link" href="">
                       <svg class="team-icon" width="16" height="16">
-                        <use
-                          href="./images/icons.svg#icon-instagram"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -314,65 +306,100 @@
           <h2 class="portfolio-title section-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-list-item">
-              <img
-                class="portfolio-img"
-                src="./images/img21.jpg"
-                width="360"
-                height="300"
-                alt="Banking App"
-              />
+              <div class="portfolio-cover">
+                <img
+                  class="portfolio-img"
+                  src="./images/img21.jpg"
+                  width="360"
+                  height="300"
+                  alt="Banking App"
+                />
+                <p class="portfolio-cover-text text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-card">
                 <h3 class="portfolio-subtitle subtitle">Banking App</h3>
                 <p class="portfolio-list-text text">App</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                class="portfolio-img"
-                src="./images/img22.jpg"
-                width="360"
-                height="300"
-                alt="Cashless Payment"
-              />
+              <div class="portfolio-cover">
+                <img
+                  class="portfolio-img"
+                  src="./images/img22.jpg"
+                  width="360"
+                  height="300"
+                  alt="Banking App"
+                />
+                <p class="portfolio-cover-text text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-card">
                 <h3 class="portfolio-subtitle subtitle">Cashless Payment</h3>
                 <p class="portfolio-list-text text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                class="portfolio-img"
-                src="./images/img23.jpg"
-                width="360"
-                height="300"
-                alt="Meditation App"
-              />
+              <div class="portfolio-cover">
+                <img
+                  class="portfolio-img"
+                  src="./images/img23.jpg"
+                  width="360"
+                  height="300"
+                  alt="Banking App"
+                />
+                <p class="portfolio-cover-text text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-card">
                 <h3 class="portfolio-subtitle subtitle">Meditation App</h3>
                 <p class="portfolio-list-text text">App</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                class="portfolio-img"
-                src="./images/img24.jpg"
-                width="360"
-                height="300"
-                alt="Taxi Service"
-              />
+              <div class="portfolio-cover">
+                <img
+                  class="portfolio-img"
+                  src="./images/img24.jpg"
+                  width="360"
+                  height="300"
+                  alt="Banking App"
+                />
+                <p class="portfolio-cover-text text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-card">
                 <h3 class="portfolio-subtitle subtitle">Taxi Service</h3>
                 <p class="portfolio-list-text text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                class="portfolio-img"
-                src="./images/img25.jpg"
-                width="360"
-                height="300"
-                alt="Screen Illustrations"
-              />
+              <div class="portfolio-cover">
+                <img
+                  class="portfolio-img"
+                  src="./images/img25.jpg"
+                  width="360"
+                  height="300"
+                  alt="Banking App"
+                />
+                <p class="portfolio-cover-text text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-card">
                 <h3 class="portfolio-subtitle subtitle">
                   Screen Illustrations
@@ -381,13 +408,20 @@
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                class="portfolio-img"
-                src="./images/img26.jpg"
-                width="360"
-                height="300"
-                alt="Online Courses"
-              />
+              <div class="portfolio-cover">
+                <img
+                  class="portfolio-img"
+                  src="./images/img26.jpg"
+                  width="360"
+                  height="300"
+                  alt="Banking App"
+                />
+                <p class="portfolio-cover-text text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-card">
                 <h3 class="portfolio-subtitle subtitle">Online Courses</h3>
                 <p class="portfolio-list-text text">Marketing</p>
